--- a/css/estilos.css
+++ b/css/estilos.css
@@ -8,20 +8,20 @@
 
 body {
 
-background-color: rgb(255, 235, 193);
+    background-color: rgb(255, 235, 193);
 }
 
 .titulo {
     text-align: center;
-    color:rgb(142, 50, 0);
+    color: rgb(142, 50, 0);
     font-style: italic;
-    font-size: 80px;
+    font-size: 60px;
     font-family: Georgia, serif;
     line-height: normal;
 }
 
 .subtitulo {
-    background:rgb(143, 189, 211) ;
+    background: rgb(143, 189, 211);
     text-align: center;
     color: rgb(243, 242, 242);
     font-style: italic;
@@ -32,9 +32,9 @@ background-color: rgb(255, 235, 193);
 
 
 .navegador {
-    background-color:rgb(142, 50, 0) ;
+    background-color: rgb(142, 50, 0);
     text-align: center;
-    
+
 
 }
 
@@ -45,8 +45,7 @@ nav {
 
 
 li {
-    
-    border: none;
+    color: rgb(142, 50, 0); border: none;
     padding: 8px 22px;
     text-align: center;
     text-decoration: none;
@@ -79,14 +78,14 @@ p {
 
 h3 {
     text-align: center;
-    color: rgba(71, 39, 17, 0);
+    color: rgb(142, 50, 0);
     font-style: italic;
     font-size: 15px;
     font-family: Georgia, serif;
 }
 
 ul li a {
-    
+
     display: flex;
     justify-content: space-between;
     text-decoration: none;
@@ -102,15 +101,15 @@ ul li a {
 
 footer {
     text-align: center;
-    background-color: rgb(142, 50, 0) ;
+    background-color: rgb(142, 50, 0);
 }
 
 h3 {
-    color: rgba(34, 94, 16, 0);
+    color: rgb(142, 50, 0);
 }
 
 .atrasdeproductos {
-    background-color:rgb(142, 50, 0);
+    background-color: rgb(142, 50, 0);
 }
 
 .productos {
@@ -121,26 +120,27 @@ h3 {
     font-family: serif;
     font-family: Georgia, serif;
     line-height: normal;
-    background-color:rgb(143, 189, 211);
+    background-color: rgb(143, 189, 211);
 }
 
 
 
 
 .combos {
-    background-color:rgb(143, 189, 211) ;
+    background-color: rgb(143, 189, 211);
     text-align: center;
     color: rgb(231, 197, 158);
     text-align: center;
     color: rgb(243, 242, 242);
     font-style: italic;
-    font-size: 80px;
-    font-family:  georgia,serif;
+    font-size: 60px;
+    font-family: georgia, serif;
 }
 
 
-.navCombos{  background:rgb(142, 50, 0) ;
-  
+.navCombos {
+    background: rgb(142, 50, 0);
+
 }
 
 .diferentescombos {
@@ -149,32 +149,32 @@ h3 {
     flex-direction: column;
     align-items: center;
     text-align: center;
-    background-color: rgb(231, 197, 158);
+    background-color: rgba(231, 197, 158, 0);
     font-size: 30px
 }
 
 .diama {
-    background-color: rgb(231, 197, 158);
+
     font-size: 30px;
 }
 
 .diapa {
-    background-color: rgb(231, 197, 158);
+
     font-size: 30px;
 }
 
 .diaa {
-    background-color: rgb(231, 197, 158);
+
     font-size: 30px;
 }
 
 .diapascuas {
-    background-color: rgb(231, 197, 158);
+
     font-size: 30px;
 }
 
 h3 {
-    background-color: rgb(231, 197, 158);
+    background-color: rgba(231, 197, 158, 0);
 }
 
 
@@ -248,7 +248,7 @@ form {
 
 /*grids index*/
 
-.indexContenedor {
+/*.indexContenedor {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 90px auto 50px auto;
@@ -285,7 +285,7 @@ form {
 .navegador {
     grid-column: 1/3;
 
-    /*flexbox*/
+    flexbox
     display: flex;
     justify-content: space-evenly;
 
@@ -296,18 +296,17 @@ form {
     grid-column: 2/2;
     grid-row: 4/5;
     background-color: rgba(228, 162, 86, 0);
-    /*flexbox*/
+    /*flexbox
     display: flex;
     flex-direction: column;
     justify-content: center;
 
 }
 
+*/
 .imagen {
 
-    grid-column: 1/2;
-    grid-row: 4/5;
-    /*flexbox*/
+
     display: flex;
     flex-direction: column;
     justify-content: center
@@ -315,12 +314,12 @@ form {
 
 .imagen1 {
     transition: all 3s;
-    width: 700px;
+    width: 400px;
 }
 
 .imagen1:hover {
-    height: 850px;
-    width: 850px;
+    height: 450px;
+    width: 450px;
     max-height: fit-content;
 
 
@@ -330,7 +329,7 @@ form {
 
 
 
-/*grids nosotras*/
+/*grids nosotras
 
 .nosotrasContenedor {
     display: grid;
@@ -351,7 +350,7 @@ form {
     gap: 20px;
 }
 
-/* en grid debo mencionarlo asi , porque del modo que nos mostro la profe no me lee la posicion*/
+/* en grid debo mencionarlo asi , porque del modo que nos mostro la profe no me lee la posicion
 .navNosotras {
 
     grid-column: 1/3;
@@ -368,7 +367,7 @@ form {
 .fondoFoto {
     grid-column: 1/2;
     grid-row: 3;
-    /*flexbox*/
+    /*flexbox
     display: flex;
     flex-direction: column;
     justify-content: center
@@ -378,13 +377,13 @@ form {
     background-color: rgba(228, 162, 86, 0.658);
     grid-column: 2/3;
     grid-row: 3;
-    /*flexbox*/
+    /*flexbox
     display: flex;
     flex-direction: column;
     justify-content: center
 }
 
-/*tamaño celular Index*/
+/*tamaño celular Index
 
 @media screen and (max-width:480px) {
     .indexContenedor {
@@ -427,7 +426,7 @@ form {
 
     /*LE PONGO "NONE" A LA IMAGEN PORQUE NO LOGRO PONERLO UNO ENCIMA DE OTRO Y JUSTAMENTE 
 AUNQUE LE AJUSTE EL TAMAÑO ME LO SIGUE PONIENDO EN LA POSICION DE DESKOPT
-AUNQUE LO EDITE SIGUE IGUAL*/
+AUNQUE LO EDITE SIGUE IGUAL
     .imagen {
         display: none;
     }
@@ -440,7 +439,7 @@ AUNQUE LO EDITE SIGUE IGUAL*/
 
 }
 
-/*Tamaño tablet Index*/
+/*Tamaño tablet Index
 
 
 
