--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,13 +1,10 @@
 * {
-    margin: 0.0%;
+    margin: 0%;
 
-    padding: 0.0%;
+    padding: 0%;
 }
 
-
-
 body {
-
     background-color: rgb(255, 235, 193);
 }
 
@@ -30,12 +27,9 @@ body {
     font-family: Georgia, serif;
 }
 
-
 .navegador {
     background-color: rgb(142, 50, 0);
     text-align: center;
-
-
 }
 
 nav {
@@ -43,6 +37,9 @@ nav {
     text-align: center;
 }
 
+.parrafito {
+    text-align: center;
+}
 
 li {
     color: rgb(142, 50, 0);
@@ -52,17 +49,11 @@ li {
     text-decoration: none;
     display: inline-block;
     margin: 4px 2px;
-
 }
-
-
 
 article {
     text-align: center;
-
 }
-
-
 
 p {
     text-align: center;
@@ -72,9 +63,6 @@ p {
     font-family: Georgia, serif;
     line-height: normal;
     background-color: rgba(228, 162, 86, 0);
-
-
-
 }
 
 h3 {
@@ -86,7 +74,6 @@ h3 {
 }
 
 ul li a {
-
     display: flex;
     justify-content: space-between;
     text-decoration: none;
@@ -98,34 +85,30 @@ ul li a {
     font-family: Georgia, serif;
 }
 
-
-
 footer {
     text-align: center;
     background-color: rgb(142, 50, 0);
 }
 
 h3 {
-    color: rgb(142, 50, 0);
+    color: rgb(255, 254, 253);
 }
 
 .atrasdeproductos {
     background-color: rgb(142, 50, 0);
+    text-align: center;
 }
 
 .productos {
     text-align: center;
     color: rgba(243, 245, 243, 0.993);
     font-style: italic;
-    font-size: 75px;
+    font-size: 50px;
     font-family: serif;
     font-family: Georgia, serif;
     line-height: normal;
     background-color: rgb(143, 189, 211);
 }
-
-
-
 
 .combos {
     background-color: rgb(143, 189, 211);
@@ -138,10 +121,17 @@ h3 {
     font-family: georgia, serif;
 }
 
-
 .navCombos {
     background: rgb(142, 50, 0);
+}
+h2{
 
+    text-align: center;
+    font-style: italic;
+    font-size: 40px;
+    font-family: serif;
+    font-family: Georgia, serif;
+    color: rgb(142, 50, 0);;
 }
 
 .diferentescombos {
@@ -151,87 +141,66 @@ h3 {
     align-items: center;
     text-align: center;
     background-color: rgba(231, 197, 158, 0);
-    font-size: 30px
+    font-size: 30px;
 }
 
 .diama {
-
     font-size: 30px;
 }
 
 .diapa {
-
     font-size: 30px;
 }
 
-.diaa {
-
+.diaA {
     font-size: 30px;
 }
 
 .diapascuas {
-
     font-size: 30px;
 }
+
+
 
 h3 {
     background-color: rgba(231, 197, 158, 0);
 }
 
-
-
-
 .nosotras {
     color: rgb(231, 197, 158);
-    ;
     background: rgb(142, 50, 0);
     text-align: center;
-    ;
     font-style: italic;
     font-size: 40px;
     font-family: serif;
     font-family: Georgia, serif;
-
-
 }
 
 .navNosotras {
     background-color: rgb(143, 189, 211);
     text-align: center;
-
 }
 
 .navContactanos {
-    background-color: rgb(142, 50, 0)
+    background-color: rgb(142, 50, 0);
 }
-
-
 
 .bodyContactanos {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-
-
-
 }
 
 .batiendoconamor {
-
     text-align: center;
-
-
-
 }
 
 form {
-
     width: 100%;
     max-width: 300px;
     margin: 0 auto;
     flex-direction: column;
     align-items: center;
-
 }
 
 .Queremos {
@@ -242,232 +211,8 @@ form {
     font-family: Georgia, serif;
     line-height: normal;
     background: rgb(143, 189, 211);
-
 }
 
 .info {
     background-color: rgb();
-}
-
-/*grids index*/
-
-/*.indexContenedor {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 90px auto 50px auto;
-    grid-template-areas:
-        "titulo titulo  "
-        "subtitulo subtitulo "
-        "navegador navegador "
-        "imagen  parrafo"
-        "footer footer"
-
-
-}
-
-.indexContenedor div {
-
-    grid-row-gap: 5px;
-    gap: 20px;
-    text-align: center;
-
-}
-
-.titulo {
-    grid-column: 1/3;
-    grid-row: 1;
-
-}
-
-.subtitulo {
-    grid-column: 1/3;
-
-
-}
-
-.navegador {
-    grid-column: 1/3;
-
-    flexbox
-    display: flex;
-    justify-content: space-evenly;
-
-}
-
-
-.parrafo {
-    grid-column: 2/2;
-    grid-row: 4/5;
-    background-color: rgba(228, 162, 86, 0);
-    /*flexbox
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-
-}
-
-*/
-.imagen {
-
-
-    display: flex;
-    flex-direction: column;
-    justify-content: center
-}
-
-.imagen1 {
-    transition: all 3s;
-    width: 400px;
-}
-
-.imagen1:hover {
-    height: 450px;
-    width: 450px;
-    max-height: fit-content;
-
-
-
-}
-
-
-
-
-/*grids nosotras
-
-.nosotrasContenedor {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: auto auto auto;
-    grid-template-areas:
-        "navegador navegador "
-        "subtitulo subtitulo "
-        "imagen  parrafo"
-
-}
-
-.nosotrasContenedor div {
-    display: flex;
-    min-width: 300px;
-    border: 4px solid rgb(229, 179, 145);
-    grid-row-gap: 5px;
-    gap: 20px;
-}
-
-/* en grid debo mencionarlo asi , porque del modo que nos mostro la profe no me lee la posicion
-.navNosotras {
-
-    grid-column: 1/3;
-    grid-row: 1;
-
-}
-
-.nosotras {
-
-    grid-column: 1/3;
-    grid-row: 2;
-}
-
-.fondoFoto {
-    grid-column: 1/2;
-    grid-row: 3;
-    /*flexbox
-    display: flex;
-    flex-direction: column;
-    justify-content: center
-}
-
-.nosotrasHistoria {
-    background-color: rgba(228, 162, 86, 0.658);
-    grid-column: 2/3;
-    grid-row: 3;
-    /*flexbox
-    display: flex;
-    flex-direction: column;
-    justify-content: center
-}
-
-/*tamaño celular Index
-
-@media screen and (max-width:480px) {
-    .indexContenedor {
-        grid-template-columns: 1fr;
-        grid-template-rows: 70px 95px 1fr 1fr 70px;
-        grid-template-areas:
-            "titulo"
-            "subtitulo"
-            "navegador"
-            "parrafo"
-            "footer";
-    }
-
-    .titulo {
-
-        font-size: 50px;
-        grid-area: "titulo";
-        display: flex;
-        flex-direction: column;
-        justify-content: center
-    }
-
-    .subtitulo {
-        grid-area: "subtitulo";
-
-    }
-
-    .navegador {
-        margin-top: 15px;
-        grid-area: "navegador";
-        display: flex;
-        flex-direction: column;
-        justify-content: center
-    }
-
-
-    .parrafito {
-        flex-wrap: nowrap;
-    }
-
-    /*LE PONGO "NONE" A LA IMAGEN PORQUE NO LOGRO PONERLO UNO ENCIMA DE OTRO Y JUSTAMENTE 
-AUNQUE LE AJUSTE EL TAMAÑO ME LO SIGUE PONIENDO EN LA POSICION DE DESKOPT
-AUNQUE LO EDITE SIGUE IGUAL
-    .imagen {
-        display: none;
-    }
-
-    .footerIndex {
-
-        grid-area: "footer";
-        flex-direction: column;
-    }
-
-}
-
-/*Tamaño tablet Index
-
-
-
-@media screen and (max-width:780px) {
-
-    .indexContenedor {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows: 90px auto auto auto;
-        grid-template-areas:
-            "titulo titulo  "
-            "subtitulo subtitulo "
-            "navegador navegador "
-            "imagen  parrafo"
-            "footer footer"
-
-    }
-
-    .navegador {
-        flex-wrap: nowrap;
-    }
-
-    .imagen img {
-        width: 400px;
-        height: 400px;
-    }
-
 }
