--- a/css/estilos.css
+++ b/css/estilos.css
@@ -8,7 +8,9 @@ body {
     background-color: rgb(255, 235, 193);
 }
 
+
 .titulo {
+   
     text-align: center;
     color: rgb(142, 50, 0);
     font-style: italic;
@@ -41,6 +43,25 @@ nav {
     text-align: center;
 }
 
+.parrafito {
+    color: rgb(142, 50, 0);
+    animation-duration: 3s;
+    animation-name: slidein;
+}
+
+@keyframes slidein {
+    from {
+        margin-left: 100%;
+        width: 300%
+    }
+
+    to {
+
+        margin-left: 0%;
+        width: 100%;
+    }
+}
+
 li {
     color: rgb(142, 50, 0);
     border: none;
@@ -57,13 +78,33 @@ article {
 
 p {
     text-align: center;
-    color: rgb(26, 13, 3);
+    color: rgb(142, 50, 0);
     font-style: italic;
     font-size: 20px;
     font-family: Georgia, serif;
     line-height: normal;
     background-color: rgba(228, 162, 86, 0);
 }
+
+.parrafe{
+    color: rgb(142, 50, 0);
+    animation-duration: 3s;
+    animation-name: slidein;
+}
+
+@keyframes slidein {
+    from {
+        margin-left: 100%;
+        width: 300%
+    }
+
+    to {
+
+        margin-left: 0%;
+        width: 100%;
+    }
+}
+
 
 h3 {
     text-align: center;
@@ -124,14 +165,16 @@ h3 {
 .navCombos {
     background: rgb(142, 50, 0);
 }
-h2{
+
+h2 {
 
     text-align: center;
     font-style: italic;
     font-size: 40px;
     font-family: serif;
     font-family: Georgia, serif;
-    color: rgb(142, 50, 0);;
+    color: rgb(142, 50, 0);
+    ;
 }
 
 .diferentescombos {
@@ -167,7 +210,7 @@ h3 {
 }
 
 .nosotras {
-    color: rgb(231, 197, 158);
+    color: rgb(250, 250, 250);
     background: rgb(142, 50, 0);
     text-align: center;
     font-style: italic;
@@ -176,10 +219,13 @@ h3 {
     font-family: Georgia, serif;
 }
 
+
 .navNosotras {
     background-color: rgb(143, 189, 211);
     text-align: center;
 }
+
+
 
 .navContactanos {
     background-color: rgb(142, 50, 0);
