--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,12 @@
+.btn--instagram {
+  background-color: #ffebc1; }
+
+.btn--facebook {
+  background-color: #8e3200; }
+
+.btn--whatsapp {
+  background-color: #8fbdd3; }
+
 .header {
   background-color: #ffebc1; }
   .header .titulo {
@@ -70,3 +79,72 @@
     font-size: 14px;
     font-style: italic;
     font-family: Georgia, serif; }
+
+.header .navegador {
+  background-color: #8e3200;
+  text-align: center; }
+
+.header .ul li a {
+  display: flex;
+  justify-content: space-between;
+  text-decoration: none;
+  text-align: center;
+  color: #ffff;
+  list-style-type: none;
+  font-style: italic;
+  font-size: 25px;
+  font-family: Georgia, serif; }
+
+.header .navegador {
+  background-color: #8e3200;
+  text-align: center; }
+
+.header .ul li a {
+  display: flex;
+  justify-content: space-between;
+  text-decoration: none;
+  text-align: center;
+  color: #ffff;
+  list-style-type: none;
+  font-style: italic;
+  font-size: 25px;
+  font-family: Georgia, serif; }
+
+combos {
+  background-color: #8fbdd3;
+  text-align: center;
+  color: #e7c59e;
+  text-align: center;
+  color: #f3f2f2;
+  font-style: italic;
+  font-size: 60px;
+  font-family: georgia, serif; }
+
+h2 {
+  text-align: center;
+  font-style: italic;
+  font-size: 40px;
+  font-family: serif;
+  font-family: Georgia, serif;
+  color: #8e3200; }
+
+.diferentescombos {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  background-color: rgba(231, 197, 158, 0);
+  font-size: 30px; }
+
+.diama {
+  font-size: 30px; }
+
+.diapa {
+  font-size: 30px; }
+
+.diaA {
+  font-size: 30px; }
+
+.diapascuas {
+  font-size: 30px; }
