--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,78 +1,5 @@
 @import "variables";
 @import "index";
-@import "combos";
+@import "combos"
 
-
-.header{
-    .navegador {
-        background-color: $colorTitulos;
-        text-align: center;    }
-
-
-
-    .ul li a {
-        display: flex;
-        justify-content: space-between;
-        text-decoration: none;
-        text-align: center;
-        color: $colorLetras;
-        list-style-type: none;
-        font-style: italic;
-        font-size: 25px;
-        font-family: Georgia, serif;
-    }
-    }
-
-    
-
-
-
-combos {
-    background-color: rgb(143, 189, 211);
-    text-align: center;
-    color: rgb(231, 197, 158);
-    text-align: center;
-    color: rgb(243, 242, 242);
-    font-style: italic;
-    font-size: 60px;
-    font-family: georgia, serif;
-}
-
-
-
-h2 {
-
-    text-align: center;
-    font-style: italic;
-    font-size: 40px;
-    font-family: serif;
-    font-family: Georgia, serif;
-    color: rgb(142, 50, 0);
-    ;
-}
-
-.diferentescombos {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    background-color: rgba(231, 197, 158, 0);
-    font-size: 30px;
-}
-
-.diama {
-    font-size: 30px;
-}
-
-.diapa {
-    font-size: 30px;
-}
-
-.diaA {
-    font-size: 30px;
-}
-
-.diapascuas {
-    font-size: 30px;
-}
+ 
