--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,10 @@
 .btn--whatsapp {
   background-color: #8fbdd3; }
 
+.img {
+  height: 50px;
+  width: 50px; }
+
 .header {
   background-color: #ffebc1; }
   .header .titulo {
@@ -45,13 +49,15 @@
     display: inline-block;
     margin: 4px 2px; }
 
-.main p {
-  text-align: center;
-  color: #8e3200;
-  font-style: italic;
-  font-size: 20px;
-  font-family: Georgia, serif;
-  line-height: normal; }
+.main {
+  text-align: center; }
+  .main p {
+    text-align: center;
+    color: #8e3200;
+    font-style: italic;
+    font-size: 20px;
+    font-family: Georgia, serif;
+    line-height: normal; }
 
 .footer {
   text-align: center;
@@ -80,11 +86,11 @@
     font-style: italic;
     font-family: Georgia, serif; }
 
-.header .navegador {
+header .navegador {
   background-color: #8e3200;
   text-align: center; }
 
-.header .ul li a {
+header .ul li a {
   display: flex;
   justify-content: space-between;
   text-decoration: none;
@@ -95,56 +101,29 @@
   font-size: 25px;
   font-family: Georgia, serif; }
 
-.header .navegador {
-  background-color: #8e3200;
+main {
   text-align: center; }
-
-.header .ul li a {
-  display: flex;
-  justify-content: space-between;
-  text-decoration: none;
-  text-align: center;
-  color: #ffff;
-  list-style-type: none;
-  font-style: italic;
-  font-size: 25px;
-  font-family: Georgia, serif; }
-
-combos {
-  background-color: #8fbdd3;
-  text-align: center;
-  color: #e7c59e;
-  text-align: center;
-  color: #f3f2f2;
-  font-style: italic;
-  font-size: 60px;
-  font-family: georgia, serif; }
-
-h2 {
-  text-align: center;
-  font-style: italic;
-  font-size: 40px;
-  font-family: serif;
-  font-family: Georgia, serif;
-  color: #8e3200; }
-
-.diferentescombos {
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-  background-color: rgba(231, 197, 158, 0);
-  font-size: 30px; }
-
-.diama {
-  font-size: 30px; }
-
-.diapa {
-  font-size: 30px; }
-
-.diaA {
-  font-size: 30px; }
-
-.diapascuas {
-  font-size: 30px; }
+  main .combos {
+    background-color: #8fbdd3;
+    text-align: center;
+    color: #e7c59e;
+    text-align: center;
+    color: #f3f2f2;
+    font-style: italic;
+    font-size: 60px;
+    font-family: georgia, serif; }
+  main h2 {
+    text-align: center;
+    font-style: italic;
+    font-size: 40px;
+    font-family: serif;
+    font-family: Georgia, serif;
+    color: #8e3200; }
+  main .diferentescombos {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    background-color: rgba(231, 197, 158, 0);
+    font-size: 30px; }
