--- a/scss/_combos.scss
+++ b/scss/_combos.scss
@@ -1,4 +1,5 @@
-.header{
+header{
+
     .navegador {
         background-color: $colorTitulos;
         text-align: center;    }
@@ -16,4 +17,45 @@
         font-size: 25px;
         font-family: Georgia, serif;
     }
+
     }
+
+
+main{
+    text-align: center;
+    .combos {
+        background-color: rgb(143, 189, 211);
+        text-align: center;
+        color: rgb(231, 197, 158);
+        text-align: center;
+        color: rgb(243, 242, 242);
+        font-style: italic;
+        font-size: 60px;
+        font-family: georgia, serif;
+    }
+    
+    
+    
+    h2 {
+    
+        text-align: center;
+        font-style: italic;
+        font-size: 40px;
+        font-family: serif;
+        font-family: Georgia, serif;
+        color: rgb(142, 50, 0);
+        ;
+    }
+    
+    .diferentescombos {
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        background-color: rgba(231, 197, 158, 0);
+        font-size: 30px;
+    }
+    
+    }
+
