--- a/scss/_productos.scss
+++ b/scss/_productos.scss
@@ -8,8 +8,8 @@
     color: rgba(243, 245, 243, 0.993);
     font-style: italic;
     font-size: 50px;
-    font-family: serif;
-    font-family: Georgia, serif;
+    
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     line-height: normal;
     background-color: rgb(143, 189, 211);
 }
