--- a/scss/_combos.scss
+++ b/scss/_combos.scss
@@ -31,7 +31,7 @@ main{
         color: rgb(243, 242, 242);
         font-style: italic;
         font-size: 60px;
-        font-family: georgia, serif;
+        font-family:  Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     }
     
     
@@ -41,8 +41,7 @@ main{
         text-align: center;
         font-style: italic;
         font-size: 40px;
-        font-family: serif;
-        font-family: Georgia, serif;
+        font-family:'Open Sans', 'Helvetica Neue', sans-serif serif;
         color: rgb(142, 50, 0);
         ;
     }
