--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 .btn--instagram {
   background-color: #ffebc1; }
 
@@ -16,9 +17,8 @@
   .header .titulo {
     text-align: center;
     color: #8e3200;
-    font-style: italic;
-    font-size: 60px;
-    font-family: Georgia, serif;
+    font-size: 80px;
+    font-family: 'Katibeh';
     line-height: normal; }
   .header .subtitulo {
     background: #8fbdd3;
@@ -26,10 +26,10 @@
     color: #ffff;
     font-style: italic;
     font-size: 40px;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; }
-  .header .navegador {
-    background-color: #8e3200;
-    text-align: center; }
+    font-family: Impact, 'Arial Narrow Bold', sans-serif; }
+  .header .carrousel-item {
+    display: grid;
+    place-content: center; }
   .header ul li a {
     display: flex;
     justify-content: space-between;
@@ -37,9 +37,8 @@
     text-align: center;
     color: #ffff;
     list-style-type: none;
-    font-style: italic;
-    font-size: 25px;
-    font-family: 'Open Sans', 'Helvetica Neue', sans-serif serif; }
+    font-size: 35px;
+    font-family: "Katibeh"; }
   .header li {
     border: none;
     padding: 8px 22px;
@@ -53,29 +52,36 @@
   .main p {
     text-align: center;
     color: #8e3200;
-    font-style: italic;
-    font-size: 20px;
-    font-family: 'Open Sans', 'Helvetica Neue', sans-serif serif;
-    line-height: normal; }
-  .main img {
-    width: 100%;
-    max-width: 400px; }
+    font-size: 30px;
+    font-family: "Katibeh";
+    line-height: normal;
+    border-radius: 110px;
+    padding: 10px; }
+  .main article {
+    text-decoration: none;
+    text-align: center;
+    line-height: normal;
+    border-radius: 130px;
+    padding: 50px; }
+  .main .carrusel {
+    width: 200%;
+    max-width: 500px; }
 
 .footer {
   text-align: center;
   background-color: #8e3200; }
   .footer ul li a {
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
     text-decoration: none;
     text-align: center;
     color: #ffff;
     list-style-type: none;
     font-style: italic;
-    font-size: 25px;
-    font-family: Georgia, serif; }
+    font-size: 35px;
+    font-family: 'Katibeh', cursive; }
   .footer li {
-    color: #8e3200;
     border: none;
     padding: 8px 22px;
     text-align: center;
@@ -84,15 +90,14 @@
     margin: 4px 2px; }
   .footer h3 {
     color: #ffff;
-    font-size: 14px;
-    font-style: italic;
-    font-family: Georgia, serif; }
+    font-size: 25px;
+    font-family: 'Katibeh', cursive; }
 
-header .navegador {
+body header .navegador {
   background-color: #8e3200;
   text-align: center; }
 
-header .ul li a {
+body header .ul li a {
   display: flex;
   justify-content: space-between;
   text-decoration: none;
@@ -103,24 +108,28 @@ header .ul li a {
   font-size: 25px;
   font-family: Georgia, serif; }
 
-main {
+body main {
   text-align: center; }
-  main .combos {
+  body main .combos {
     background-color: #8fbdd3;
     text-align: center;
-    color: #e7c59e;
     text-align: center;
     color: #f3f2f2;
     font-style: italic;
     font-size: 60px;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; }
-  main h2 {
+  body main .madre {
+    width: 200%;
+    max-width: 500px;
+    background-color: #8e3200;
+    border-width: 10%; }
+  body main h2 {
     text-align: center;
     font-style: italic;
     font-size: 40px;
     font-family: 'Open Sans', 'Helvetica Neue', sans-serif serif;
     color: #8e3200; }
-  main .diferentescombos {
+  body main .diferentescombos {
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
@@ -143,11 +152,16 @@ main {
   background-color: #8fbdd3; }
 
 main {
-  background-color: #ffebc1; }
+  text-decoration: none;
+  text-align: center;
+  line-height: normal;
+  border-radius: 130px;
+  padding: 50px; }
   main img {
     display: flex;
     align-items: center;
-    justify-content: center; }
+    justify-content: center;
+    background-color: #8e3200; }
 
 header .nosotras {
   color: #fafafa;
@@ -163,14 +177,16 @@ main .parrafe {
   font-family: 'Open Sans', 'Helvetica Neue', sans-serif serif; }
 
 main img {
-  -webkit-box-shadow: -1px 0px 30px 0px rgba(85, 41, 21, 0.93);
-  -moz-box-shadow: -1px 0px 30px 0px rgba(85, 41, 21, 0.93);
-  box-shadow: -1px 0px 30px 0px rgba(85, 41, 21, 0.93); }
+  text-decoration: none;
+  text-align: center;
+  line-height: normal;
+  border-radius: 130px;
+  padding: 50px; }
 
-footer {
-  -webkit-box-shadow: -1px 0px 30px 0px rgba(85, 41, 21, 0.93);
-  -moz-box-shadow: -1px 0px 30px 0px rgba(85, 41, 21, 0.93);
-  box-shadow: -1px 0px 30px 0px rgba(85, 41, 21, 0.93); }
+main .niña {
+  width: 200%;
+  max-width: 500px;
+  background-color: #ffebc1; }
 
 body {
   background-color: #ffebc1; }
@@ -186,9 +202,8 @@ body {
       text-align: center;
       color: #ffff;
       list-style-type: none;
-      font-style: italic;
-      font-size: 25px;
-      font-family: Georgia, serif; }
+      font-size: 35px;
+      font-family: 'Katibeh', cursive; }
     body header li {
       border: none;
       padding: 8px 22px;
