--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -60,10 +60,13 @@
         line-height: normal;
         padding: 50px;
     }
+}
+   
 
-
-    }
-
+@media screen and (max-width: 400px) {
+    .imagen{
+       display: none !important;
+}}
 
 
 
